<resources>
    <string name="app_name">KumikomiTeamBuiding</string>
    <string name="main_title">Raspberry Pi 接続先</string>
    <string name="ip_address_checking">IPアドレスを確認中...</string>
    <string name="ip_address_format">IPアドレス: %1$s\nポート: %2$d\nhttp://%1$s:%2$d</string>
    <string name="ip_address_unavailable">IPアドレスを取得できません\n同じネットワークに接続してください</string>
    <string name="qr_code_description">Raspberry Pi 接続先のQRコード</string>
    <string name="qr_scanned_notification_title">QRコード読取完了</string>
    <string name="qr_scanned_notification_message">%1$s が接続先を読み取りました</string>
    <string name="scan_complete_title">読み取りました</string>
    <string name="scan_complete_message">%1$s とスマートフォンを接続しました</string>
    <string name="back_to_timer">タイマーに戻る</string>
    <string name="media_listener_label">音楽操作</string>
    <string name="media_access_enabled">音楽操作: 有効</string>
    <string name="media_access_required">音楽操作: 通知へのアクセスが必要です</string>
    <string name="open_notification_access">通知アクセス設定</string>
    <string name="focus_title">FOCUS</string>
    <string name="focus_phase">集中</string>
    <string name="break_phase">休憩</string>
    <string name="timer_ready">準備できています</string>
    <string name="timer_running">計測中</string>
    <string name="timer_paused">一時停止</string>
    <string name="timer_start">開始</string>
    <string name="timer_pause">一時停止</string>
    <string name="timer_reset">タイマーをリセット</string>
    <string name="finish_break">休憩を終了</string>
    <string name="connection">接続</string>
    <string name="statistics">今回の集中</string>
    <string name="focus_rate">集中率</string>
    <string name="focused_time">集中できた時間</string>
    <string name="distracted_time">外れていた時間</string>
    <string name="timeline">時間ごとの集中</string>
    <string name="timer_page_description">タイマー</string>
    <string name="stats_page_description">統計</string>
    <string name="connection_title">Raspberry Pi 接続</string>
    <string name="connection_waiting">接続先を確認しています</string>
    <string name="timer_inactive_api">集中タイマーが稼働していません</string>
</resources>
